@@ -35,7 +35,7 @@
   a14614e416d2a0aa7d4d0bbc1b30ab85e73d704b 2013090300 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  8a365a35815a40e7e81f4ec3fe6eee6482080ae7 2013090800 mingw32-gcc4.xml
+  aa57cd5a0e02d039f82522d68476f948a64115d7 2013090802 mingw32-gcc4.xml
   2aec3c75d5ccba91607e343bcc304f3baf24ae56 2012082702 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   e96f16b3e2b203b30e719f840acb0bed5a44226a 2013090300 mingw32-gettext.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d0657d9bc4fd5fa5bae78d80f003485cfde305c3 2013082300 mingw32-mpc.xml
   9c47305797d932da02275a6894b30492440af00e 2013082300 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090800 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090802 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   7e22a7d22719059c28dcb37b7a48806070964b09 2013082800 mingw32-pthreads-w32.xml
