@@ -25,6 +25,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="lic">
+	<release tarname="gcc-core-4.8.1-2-mingw32-lic.tar.lzma" />
 	<release tarname="gcc-core-4.8.1-1-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.7.2-1-mingw32-lic.tar.lzma" />
         <release tarname="gcc-4.7.0-1-mingw32-lic.tar.lzma" />
@@ -34,6 +35,12 @@
       </component>
 
       <component class="bin">
+	<release tarname="gcc-core-4.8.1-2-mingw32-bin.tar.lzma">
+	  <requires eq="gcc-core-%-mingw32-dev.tar.lzma" />
+	  <requires eq="binutils-*-mingw32-bin.tar.lzma" />
+	  <requires eq="mingwrt-4.*-mingw32-dev.tar.lzma" />
+	  <requires eq="w32api-4.*-mingw32-dev.tar.lzma" />
+	</release>
 	<release tarname="gcc-core-4.8.1-1-mingw32-bin.tar.lzma">
 	  <requires eq="gcc-core-%-mingw32-dev.tar.lzma" />
 	  <requires eq="binutils-*-mingw32-bin.tar.lzma" />
@@ -97,12 +104,16 @@
       </component>
 
       <component class="dev">
+	<release tarname="gcc-core-4.8.1-2-mingw32-dev.tar.lzma">
+	  <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+	</release>
 	<release tarname="gcc-core-4.8.1-1-mingw32-dev.tar.lzma">
 	  <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
 	</release>
       </component>
 
       <component class="doc">
+        <release tarname="gcc-core-4.8.1-2-mingw32-doc.tar.lzma" />
         <release tarname="gcc-core-4.8.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.7.2-1-mingw32-doc.tar.lzma" />
         <release tarname="gcc-4.7.0-1-mingw32-doc.tar.lzma" />
@@ -112,14 +123,17 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-core-4.8.1-2-mingw32-man.tar.lzma" />
         <release tarname="gcc-core-4.8.1-1-mingw32-man.tar.lzma" />
       </component>
 
       <component class="info">
+        <release tarname="gcc-core-4.8.1-2-mingw32-info.tar.lzma" />
         <release tarname="gcc-core-4.8.1-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="gcc-4.8.1-2-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.8.1-1-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.7.2-1-mingw32-lang.tar.lzma" />
         <release tarname="gcc-4.7.0-1-mingw32-lang.tar.lzma" />
@@ -155,6 +169,10 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+	<release tarname="libgcc-4.8.1-2-mingw32-dll-1.tar">
+	  <download tarname="gcc-core-4.8.1-2-mingw32-dll.tar.lzma"/>
+	  <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
+	</release>
 	<release tarname="libgcc-4.8.1-1-mingw32-dll-1.tar">
 	  <download tarname="gcc-core-4.8.1-1-mingw32-dll.tar.lzma"/>
 	  <requires eq="mingw32-libmpc-*-mingw32-dll-2.tar" />
@@ -186,6 +204,13 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+	<release tarname="gcc-ada-4.8.1-2-mingw32-bin.tar.lzma">
+	  <requires eq="gcc-ada-%-mingw32-dev.tar.lzma" />
+	  <requires eq="gcc-core-%-mingw32-dev.tar.lzma" />
+	  <requires eq="mingwrt-4.*-mingw32-dev.tar.lzma" />
+	  <requires eq="w32api-4.*-mingw32-dev.tar.lzma" />
+	  <requires eq="binutils-*-mingw32-bin.tar.lzma" />
+	</release>
 	<release tarname="gcc-ada-4.8.1-1-mingw32-bin.tar.lzma">
 	  <requires eq="gcc-ada-%-mingw32-dev.tar.lzma" />
 	  <requires eq="gcc-core-%-mingw32-dev.tar.lzma" />
@@ -211,19 +236,17 @@
         </release>
       </component>
 
-      <component class="dll">
-	<release tarname="gcc-ada-4.8.1-1-mingw32-dll.tar.lzma" >
-	  <requires eq="libgnat-%-mingw32-dll-0.tar" />
-	</release>
-      </component>
-
       <component class="dev">
+	<release tarname="gcc-ada-4.8.1-2-mingw32-dev.tar.lzma">
+	  <requires eq="mingw32-libgnat-%-mingw32-dll.tar" />
+	</release>
 	<release tarname="gcc-ada-4.8.1-1-mingw32-dev.tar.lzma">
-	  <requires eq="gcc-ada-%-mingw32-dll.tar.lzma" />
+	  <requires eq="mingw32-libgnat-%-mingw32-dll.tar" />
 	</release>
       </component>
 
       <component class="info">
+	<release tarname="gcc-ada-4.8.1-2-mingw32-info.tar.lzma" />
 	<release tarname="gcc-ada-4.8.1-1-mingw32-info.tar.lzma" />
       </component>
     </package>
@@ -255,8 +278,11 @@
         <release tarname="libgnat-4.6.2-1-mingw32-dll-4_6.tar.lzma" />
         <release tarname="libgnat-4.7.0-1-mingw32-dll-4_7.tar.lzma" />
         <release tarname="libgnat-4.7.2-1-mingw32-dll-4_7.tar.lzma" />
-	<release tarname="libgnat-4.8.1-1-mingw32-dll-0.tar" >
-	  <download tarname="none" />
+	<release tarname="libgnat-4.8.1-2-mingw32-dll-4_8.tar" >
+	  <download tarname="gcc-ada-4.8.1-2-mingw32-dll.tar.lzma" />
+	</release>
+	<release tarname="libgnat-4.8.1-1-mingw32-dll-4_8.tar" >
+	  <download tarname="gcc-ada-4.8.1-1-mingw32-dll.tar.lzma" />
 	</release>
       </component>
     </package>
@@ -280,6 +306,9 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+	<release tarname="gcc-c++-4.8.1-2-mingw32-bin.tar.lzma" >
+	  <requires eq="gcc-c++-4.8.1-2-mingw32-dev.tar.lzma" />
+	</release>
 	<release tarname="gcc-c++-4.8.1-1-mingw32-bin.tar.lzma" >
 	  <requires eq="gcc-c++-4.8.1-1-mingw32-dev.tar.lzma" />
 	</release>
@@ -306,16 +335,21 @@
       </component>
 
       <component class="dev">
+	<release tarname="gcc-c++-4.8.1-2-mingw32-dev.tar.lzma" >
+	  <requires eq="mingw32-libstdc++-4.8.1-2-mingw32-dll-6.tar" />
+	</release>
 	<release tarname="gcc-c++-4.8.1-1-mingw32-dev.tar.lzma" >
 	  <requires eq="mingw32-libstdc++-4.8.1-1-mingw32-dll-6.tar" />
 	</release>
       </component>
 
       <component class="doc">
+	<release tarname="gcc-c++-4.8.1-2-mingw32-doc.tar.lzma" />
 	<release tarname="gcc-c++-4.8.1-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="man">
+	<release tarname="gcc-c++-4.8.1-2-mingw32-man.tar.lzma" />
 	<release tarname="gcc-c++-4.8.1-1-mingw32-man.tar.lzma" />
       </component>
     </package>
@@ -343,6 +377,9 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+	<release tarname="libstdc++-4.8.1-2-mingw32-dll-6.tar" >
+	  <download tarname="gcc-c++-4.8.1-2-mingw32-dll.tar.lzma" />
+	</release>
 	<release tarname="libstdc++-4.8.1-1-mingw32-dll-6.tar" >
 	  <download tarname="gcc-c++-4.8.1-1-mingw32-dll.tar.lzma" />
 	</release>
@@ -374,6 +411,9 @@
       <licence tarname="gcc-%-mingw32-lic.tar.lzma" />
 
       <component class="bin">
+	<release tarname="gcc-fortran-4.8.1-2-mingw32-bin.tar.lzma">
+	  <requires eq="gcc-fortran-%-mingw32-dev.tar.lzma" />
+	</release>
 	<release tarname="gcc-fortran-4.8.1-1-mingw32-bin.tar.lzma">
 	  <requires eq="gcc-fortran-%-mingw32-dev.tar.lzma" />
 	</release>
@@ -400,20 +440,26 @@
       </component>
 
       <component class="dev">
+	<release tarname="gcc-fortran-4.8.1-2-mingw32-dev.tar.lzma" >
+	  <requires eq="libgfortran-4.8.1-2-mingw32-dll-3.tar" />
+	</release>
 	<release tarname="gcc-fortran-4.8.1-1-mingw32-dev.tar.lzma" >
 	  <requires eq="libgfortran-4.8.1-1-mingw32-dll-3.tar" />
 	</release>
       </component>
 
       <component class="doc">
+	<release tarname="gcc-fortran-4.8.1-2-mingw32-doc.tar.lzma" />
 	<release tarname="gcc-fortran-4.8.1-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="info">
+	<release tarname="gcc-fortran-4.8.1-2-mingw32-info.tar.lzma" />
 	<release tarname="gcc-fortran-4.8.1-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="man">
+	<release tarname="gcc-fortran-4.8.1-2-mingw32-man.tar.lzma" />
 	<release tarname="gcc-fortran-4.8.1-1-mingw32-man.tar.lzma" />
       </component>
     </package>
@@ -443,6 +489,9 @@
         <release tarname="libgfortran-4.6.2-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.7.0-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libgfortran-4.7.2-1-mingw32-dll-3.tar.lzma" />
+	<release tarname="libgfortran-4.8.1-2-mingw32-dll-3.tar" >
+	  <download tarname="gcc-fortran-4.8.1-2-mingw32-dll.tar.lzma" />
+	</release>
 	<release tarname="libgfortran-4.8.1-1-mingw32-dll-3.tar" >
 	  <download tarname="gcc-fortran-4.8.1-1-mingw32-dll.tar.lzma" />
 	</release>
@@ -517,22 +566,24 @@
 	  <requires eq="gcc-core-%-mingw32-bin.tar" />
           <requires eq="libobjc-%-mingw32-dll-2.tar" />
         </release>
+	<release tarname="gcc-objc-4.8.1-2-mingw32-bin.tar" >
+	  <download tarname="none" />
+	  <requires eq="gcc-core-4.8.1-2-mingw32-bin.tar.lzma" />
+	  <requires eq="gcc-objc-4.8.1-2-mingw32-dev.tar.lzma" />
+	</release>
 	<release tarname="gcc-objc-4.8.1-1-mingw32-bin.tar" >
 	  <download tarname="none" />
+	  <requires eq="gcc-core-4.8.1-1-mingw32-bin.tar.lzma" />
 	  <requires eq="gcc-objc-4.8.1-1-mingw32-dev.tar.lzma" />
 	</release>
       </component>
 
-      <component class="dll">
-	<release tarname="gcc-objc-4.8.1-1-mingw32-dll.tar.lzma" >
-	  <requires eq="gcc-core-%-mingw32-bin.tar.lzma" />
-	  <requires eq="libobjc-%-mingw32-dll-0.tar" />
-	</release>
-      </component>
-
       <component class="dev">
+	<release tarname="gcc-objc-4.8.1-2-mingw32-dev.tar.lzma">
+	  <requires eq="libobjc-%-mingw32-dll-4.tar" />
+	</release>
 	<release tarname="gcc-objc-4.8.1-1-mingw32-dev.tar.lzma">
-	  <requires eq="gcc-objc-%-mingw32-dll.tar.lzma" />
+	  <requires eq="libobjc-%-mingw32-dll-4.tar" />
 	</release>
       </component>
     </package>
@@ -565,8 +616,11 @@
         <release tarname="libobjc-4.6.2-1-mingw32-dll-3.tar.lzma" />
         <release tarname="libobjc-4.7.0-1-mingw32-dll-4.tar.lzma" />
         <release tarname="libobjc-4.7.2-1-mingw32-dll-4.tar.lzma" />
-	<release tarname="libobjc-4.8.1-1-mingw32-dll-0.tar" >
-	  <download tarname="none"/>
+	<release tarname="libobjc-4.8.1-2-mingw32-dll-4.tar" >
+	  <download tarname="gcc-objc-4.8.1-2-mingw32-dll.tar.lzma"/>
+	</release>
+	<release tarname="libobjc-4.8.1-1-mingw32-dll-4.tar" >
+	  <download tarname="gcc-objc-4.8.1-1-mingw32-dll.tar.lzma"/>
 	</release>
       </component>
     </package>
@@ -584,6 +638,10 @@
         <release tarname="libgomp-4.6.2-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.7.0-1-mingw32-dll-1.tar.lzma" />
         <release tarname="libgomp-4.7.2-1-mingw32-dll-1.tar.lzma" />
+	<release tarname="libgomp-4.8.1-2-mingw32-dll-1.tar" >
+	  <download tarname="none"/>
+	  <requires eq="mingw32-libgcc-4.8.1-2-mingw32-dll-1.tar" />
+	</release>
 	<release tarname="libgomp-4.8.1-1-mingw32-dll-1.tar" >
 	  <download tarname="none"/>
 	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll-1.tar" />
@@ -603,6 +661,10 @@
         <release tarname="libssp-4.6.2-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.7.0-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libssp-4.7.2-1-mingw32-dll-0.tar.lzma" />
+	<release tarname="libssp-4.8.1-2-mingw32-dll-0.tar" >
+	  <download tarname="none" />
+	  <requires eq="mingw32-libgcc-4.8.1-2-mingw32-dll-1.tar" />
+	</release>
 	<release tarname="libssp-4.8.1-1-mingw32-dll-0.tar" >
 	  <download tarname="none" />
 	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll-1.tar" />
@@ -621,6 +683,10 @@
         <release tarname="libquadmath-4.6.2-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libquadmath-4.7.0-1-mingw32-dll-0.tar.lzma" />
         <release tarname="libquadmath-4.7.2-1-mingw32-dll-0.tar.lzma" />
+	<release tarname="libquadmath-4.8.1-2-mingw32-dll-0.tar" >
+	  <download tarname="none"/>
+	  <requires eq="mingw32-libgcc-4.8.1-2-mingw32-dll-1.tar" />
+	</release>
 	<release tarname="libquadmath-4.8.1-1-mingw32-dll-0.tar" >
 	  <download tarname="none"/>
 	  <requires eq="mingw32-libgcc-4.8.1-1-mingw32-dll-1.tar" />
